[package]
name = "dorkfs"
version = "0.1.0"
authors = ["Markus Hosch <markus.hosch@gmx.net>"]
edition = "2018"

[features]
gitcache = ["git2"]

[dependencies]
failure = "0.1"
libc = "0.2"
log = "0.4"
env_logger = "0.5"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = "1.4"
rand = "0.5"
lazy_static = "1.0"
tempfile = "3.0"
git2 = { version = "0.8", optional = true }
hyper = { version = "0.13.0-alpha.4", features = [] }
hyper-tls = "0.4.0-alpha.4"
http = "0.1"
futures = { version = "0.3", features = [] }
tokio = "0.2.0-alpha.6"
tokio-tls = "0.3.0-alpha.6"
base64 = "0.9"
bytes = "0.4"
regex = "1.1"
owning_ref = "0.4"
either = "1.5"
glob = "0.3"
lru = "0.1"
native-tls = "0.2"
structopt = "0.3"
futures-util-preview = { package = "futures-util-preview", version="0.3.0-alpha.19" }

[target.'cfg(target_os = "linux")'.dependencies]
fuse_mt = "0.4"
