[package]
name = "dorkfs"
version = "0.1.0"
authors = ["Markus Hosch <markus.hosch@gmx.net>"]
edition = "2018"

[features]
gitcache = ["git2"]

[dependencies]
failure = "0.1"
libc = "0.2"
log = "0.4"
env_logger = "0.5"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = { version = "0.7", features = ["small_rng"] }
lazy_static = "1.4"
tempfile = "3.1"
git2 = { version = "0.11", optional = true }
hyper = { version = "0.13", features = ["tcp"] }
hyper-tls = "0.4"
http = "0.2"
futures = { version = "0.3", features = [] }
tokio = { version = "0.2", features = ["macros", "time", "fs", "uds", "io-std", "rt-threaded", "stream", "blocking"] }
tokio-tls = "0.3"
base64 = "0.11"
bytes = "0.5"
regex = "1.3"
owning_ref = "0.4"
either = "1.5"
glob = "0.3"
lru = "0.4"
native-tls = "0.2"
structopt = "0.3"
difference = "2.0"
pin-project = "0.4"
hyper-proxy = { version = "0.6", features = ["tls"] }
typed-headers = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
fuse_mt = "0.5"
